--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,64 @@
+* 2021/05/16 (日)
+go のパッケージの作り方を勉強した。
+
+* 2021/05/15 (土)
+「うちの使い魔がすみません」面白かった。
+
+* 2021/05/14 (金)
+Loop Hero クリア。ネクロマンサーでスケルトン関連のスキルを集めるといける。
+沈没船とか血の森作らなければ安定していける。
+
+* 2021/05/13 (木)
+詳しくなったけどあんま意味なかったな、ということがある。
+きっとそれは役に立ちますよと慰められるという経験も、同じくらい多い。
+
+* 2021/05/12 (水)
+Loop Hero すべての地形がオープンされた。
+あとは最終ステージをクリアするのみ。
+
+* 2021/05/11 (火)
+「仲良くする」ということは「仲良くしない人」をはじき出すということなのかもしれない。
+
+* 2021/05/10 (月)
+Loop Hero おもしろすぎる。
+slack チャンネル多すぎると思って、離れることにした。
+
+* 2021/05/09 (日)
+Go の勉強少ししてあとは Loop Hero を遊んだ。
+
+* 2021/05/08 (土)
+まあまあ面白い導入だったはずなんだけどつじつまを合わせていくと
+なんだかありそうな話に着地してしまって、驚きがなくなってしまった。
+
+亜人の最終巻見た。やっと決着。結局、佐藤の物語になってた。
+
+* 2021/05/07 (金)
+Loop Hero 買った。めちゃくちゃおもしろかった。
+
+* 2021/05/06 (木)
+変なバグの対処方法探しててめちゃくちゃ疲れた。
+
+* 2021/05/05 (水)
+
+灼熱カバディを読んで、脳が茹で上がるほど興奮した。
+公園まで歩いた。1万歩になった。最終日だと気づいて絶望した。
+
+また、物語を考え始めた。
+あらすじはまあ良いんだけど、文章にしてみると具体的にしてみると、
+その情報の頼りなさに不安になる。
+本物を知らない人間が、上辺の情報で取り繕っているというのが透けて見える。
+これはこまった。それが本質ではないのに。
+でも、それを消してしまったら、疑問の余地が生じるのではないか。
+
+* 2021/05/04 (火)
+セブンを見た。クロノトリガーやフロントミッションの話をした。
+
+* 2021/05/03 (月)
+眠くてしかたがなく、横になっていった。何もしなかったという深い罪悪感にとらわれている。
+ロックマンXと、ポケモンスナップのRTAを見た。
+
+* 2021/05/02 (日)
+アークナイツとチェンクロ進めて、ビッグフィッシュ見た。
 
 * 2021/05/01 (土)
 サイトのレイアウト調整。
