--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,90 @@
+* 2021/05/26 (水)
+長年勤めている会社で、外部から入社した人が上司になると、反発する心がでてくる。
+年齢とかじゃなくて、その人の能力を認めていないと言うか。
+それは会社でなかったとしてもそうだ。
+
+https://twitter.com/koujounodenki/status/1397188516044541955
+
+この問題、下から2桁目が A と B を足して B のままになっているというのが糸口になっていておもしろい。
+
+* 2021/05/25 (火)
+なんかわからないけど、自尊心が爆発していた。
+なんかめんどくさいとかうまく行かないとかそういうのばかり気づいて、
+仕事を楽しむということを忘れていたような気がする。
+
+悪いことに目を向けるというのも無駄ではない。
+ただ、良いところに目を向けて生きていくほうが楽だろう。
+周りに囚われてはいけない、いろいろな人がそう言っている。
+けれどそれが、とても難しいことなのだ。
+
+* 2021/05/24 (月)
+大切にしていることを手放してはいけないと思った。
+軽い気持ちで人に任せると、それは自然と変形し、潰れていってしまう。
+
+論文書けば書くほどわからなくなる状態。
+そういうときはだいたい、現状把握か、主張したいことが正しく認識できてない。
+具体的にする。何をどうしたいのか、もう一度見直す。そして、複雑な問題は小さく分解する。
+傍らにいる誰かに語りかけて、説得できるかと想像してみる。
+
+* 2021/05/23 (日)
+自分だけが損をして人にものを与えるのは、単なる自己犠牲でそれはよくないそうだ。
+与え合い、お互いが得をするような関係を作れる人が成功するのだという。
+
+先行投資はいつも損をするように見える。
+
+* 2021/05/22 (土)
+長距離散歩して、鎌倉パスタで1500円くらいの生パスタを食べた。
+
+* 2021/05/21 (金)
+久しぶりに出勤。今まで好きだったカレーを食べたら、辛すぎてあまり美味しさを感じなかった。
+
+女の園の星、面白い。
+エルフと狩猟士のアイテム工房、平和でよかった。
+
+* 2021/05/20 (木)
+プログラマ以外と一時間ほど会話する交流会の日。
+
+面倒だし、他部署には興味がないのでやりたくない。
+段取りも良くなかった。担当者が不在で、司会をやる人がいなかった。
+
+そういえばこういう行事は昔の会社でもやっていたなと思い出す。
+こういう場面で、人の機嫌を取ろうと動いていたが、簡単なことではない。
+うまく行かないこともあるし、それなりに疲れる。
+今日はただ静観していようと思った。
+
+ビデオ会議に、暗い顔をした男たちが三人集まる。
+入社して四日目のメンバーもいた。沈黙が耐えられなくて、話を切り出す。
+お互い様子を伺いながら、どうでもいい話をする。本音で話さない。
+いつだってこういう時間があるのは仕方がないけれど、慣れない。
+
+* 2021/05/19 (水)
+職場で、自己評価の日。
+
+チーム全員にプラスが有るような取り組みを考えていた。
+プログラムに関するドキュメントを作っていこうという考えだ。
+誰からも反対はされなかったけれど、何もコンテンツが増えなかった。
+どういうものが作りたいとか、どういう風に作っていくのかビジョンが弱かったのだと思う。
+そして、誰かの心を動かすというのは難しいと思った。
+強い情熱があるなら、自ら主導していくという可能性もあるかもしれないが、今の自分にそれはない。
+少ない負担でよい成果が得られるようなものを考えたい。
+
+昔七年間働いた職場で、受け身であることが、弱みかもしれないと指摘を受けたことを思い出す。
+そのとおりに違いない。その傾向は長い時間で醸成されたものなので、急に変えることはできない。
+そのなかでうまくやる方法を探していくしかない。
+
+* 2021/05/18 (火)
+警察で事情聴取を受けた。
+
+* 2021/05/17 (月)
+妻が交通事故にあって救急車で運ばれた。エアバッグは起動しなかったらしい。
+いま、救急車で運ばれているよ、と自ら電話をかけてきたので驚いた。
+深刻な声色と、背後で鳴っているサイレンが、冗談ではないことを証明していた。
+ただ動揺した。どうすればいいのか、わからなかった。
+
+急ぎ病院に向かったところ、意識ははっきりしているし、会話も問題がなかった。
+しかし、スカートに血痕がついていたり、首筋にシートベルトの形をした痣ができていた。
+一緒に帰って、出前の寿司を頼んだ。
+
 * 2021/05/16 (日)
 go のパッケージの作り方を勉強した。
 
