--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,28 @@
+* 2021/06/27 (日)
+
+* 2021/06/26 (土)
+車に乗ったけど駐車がうまくできなかった…。
+動画見て勉強してみよう…。
+
+* 2021/06/25 (金)
+失敗を語るのは難しい。
+今まさに失敗していることを語るのは、さらに難しい。
+
+* 2021/06/24 (木)
+小さな問題がたくさん転がっていて、そこには感情のゆらめきがある。
+怒り、不満、いらだち。それは悲しいことだが今はただ良い仕事をするように努力する。
+少しずつ良いことを重ねていけば理想の未来につながっているにちがいない。
+
+* 2021/06/22 (火)
+yama あるいは映画のような
+
+皆が頑張った結果です。とても素晴らしかった。
+そう言われるのはかすかに嬉しい。
+そういうことが大事なんだと思う。
+
+* 2021/06/21 (月)
+全然仕事うまくいかない。疲労する。
+
 * 2021/06/20 (日)
 記事検索の機能がほしい。
 とりあえず記事一覧を react-select 使ってみよう。
