日記を書き足す

--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,5 +1,97 @@
-* 2021/06/27 (日)
+* 2021/07/18 (日)
+ツイッター API について調べよう。
+https://developer.twitter.com/en/docs
+https://developer.twitter.com/en/docs/tutorials/step-by-step-guide-to-making-your-first-request-to-the-twitter-api-v2
 
+- ツイッター API でツイートを投稿したり、取得したりできる。
+- ツイッター API を使うにはデベロッパーアカウントが必要。
+- スタンダードと学術研究用（academic research）がある。学術研究用の場合アクセス回数の上限とかが増えるらしいけどよくわからない。
+
+https://developer.twitter.com/en/portal/projects/new
+
+とりあえずプロジェクト作ってみる。
+色々聞かれるが適当に入れとけばよさそう。
+そこで止められるということはない。
+
+キーがもらえるのでそれを使っていく。
+
+#+begin_src bash
+TWITTER_API_BEARER_TOKEN=xxxxxx
+curl --request GET 'https://api.twitter.com/2/tweets/search/recent?query=from:eggc0 \
+     --header "Authorization: Bearer $TWITTER_API_BEARER_TOKEN"
+#+end_src
+
+これで自分のツイートが取れるはず。結構簡単に使えて良い感じだ。
+
+https://github.com/twitterdev/Twitter-API-v2-sample-code/blob/main/Tweet-Lookup/get_tweets_with_bearer_token.js
+
+js を使うときはこんな感じだ。
+
+* 2021/07/17 (土)
+めちゃくちゃギルティギアした。
+勝率6割くらいだったので気持ちよかった。
+ラムレザルとの対戦は、リーチが違いすぎてまともに勝負できないので、水月のハコビを適当に使って荒らすしかなさそう。
+
+* 2021/07/16 (金)
+スクラムというかチームで働くというのがめちゃくちゃ難しい気がしてきた。
+* 2021/07/15 (木)
+結構ストレスかかる仕事を切り抜けた。
+このあともあるけど、とりあえず一息。
+
+この話結構いいなと思った。
+
+> デヴィッド：日本の特色というのは、フローチャートでも確かにあります。まず一番にくるのは、共感能力です。選択肢において、共感を必要とするチョイスは、日本人がぐっと高いんですよ。それは、アンドロイドの立場になって共感するのも、人間の立場から共感するのも同じ傾向です。
+
+> デヴィッド：そうです。例えば、エンディングのほうでカーラがバスのチケットを見つけるシーンがありますが、あのチケットの持ち主は赤ちゃんがいる若い人間の夫婦じゃないですか。カーラがチケットを手にしたあと、その夫婦が戻ってきてチケットをなくしてしまったと取り乱す場面で、夫婦にチケットを返すかどうかという選択肢が出現するわけですが…大抵の国では、チケットを返すのが大体40％、自分のものにしてしまうのが60％くらいなんです。なのに、日本は85％が返すんですよ。他の国の2倍以上の人が、人間の夫婦のほうに同情をして、チケットを返してしまうんです。
+
+https://www.gamer.ne.jp/news/201909170030/
+
+* 2021/07/14 (水)
+仕事明けてから夢中でアークナイツ。
+とにかくイフリータでめちゃくちゃにするという方針でやった。
+それが正しいかどうかはわからないけど自分なりのやり方で鉛封契約勲章Ⅱが取れたので満足。
+* 2021/07/13 (火)
+副作用で微熱がでてあまり集中できない。ぐったりする感じ。
+
+* 2021/07/12 (月)
+コロナワクチン接種。書類で色々トラブったので各所に連絡したりして疲れた…。
+
+* 2021/07/11 (日)
+カレードリア少なかったので2個食べてしまった。
+車の練習で近くの駅とか行ってみた。まだまだ慣れない。
+オッドタクシー最後まで見た。脚本がすごかった…。
+
+* 2021/07/10 (土)
+オッドタクシー10話分くらいみた。
+日常ものかと思ったら色んな謎がでてきて引き込まれた。
+あと闇が深い。
+
+* 2021/07/09 (金)
+白夜極光のイベントただ周回するだけでつまらない感じがする。
+
+* 2021/07/08 (木)
+目標設定するの結構憂鬱だな。
+何を目指すべきか。よそ行きの目標を考えてしまう。
+真心はどこだ。
+* 2021/07/07 (水)
+* 2021/07/06 (火)
+２年くらい一緒に仕事してきた若者が出世して名古屋に行くらしい。びっくりだ。
+ほんとに。二人チーム解散だなあ…。
+
+* 2021/07/05 (月)
+豪雨
+* 2021/07/04 (日)
+* 2021/07/03 (土)
+公園に連れて行ってもらい、そこで駐車練習した。
+* 2021/07/02 (金)
+* 2021/07/01 (木)
+アウトローがめちゃくちゃしている場所とか文化的に知らんこと多いな。
+* 2021/06/30 (水)
+とにかく関心を持ってほしくて、相手が望んでないものを上げてしまったりとかしたこと思い出す。
+つらすぎる。受け取る側としてもつらすぎる。
+* 2021/06/29 (火)
+* 2021/06/28 (月)
+* 2021/06/27 (日)
 * 2021/06/26 (土)
 車に乗ったけど駐車がうまくできなかった…。
 動画見て勉強してみよう…。
