警告が出る箇所を修正

--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,31 @@
+* 2021/07/22 (木)
+
+- twitter のつぶやきを埋め込み
+- html のキャッシュ取る
+
+* 2021/07/21 (水)
+自分の「強み」とはなんだろう。
+なんかそれはとても大切なことのように思える。
+
+汎用的に作りすぎてしまってこれはダメだなって思ったので反省。
+たとえば10個くらい属性があって、1個だけ無視したいケースが有ると言うときに
+10個全種類無視できるような対応を入れてしまった。
+ちょうどよいメソッドが有るからというのが原因。
+
+* 2021/07/20 (火)
+雑談をするというのも案外難しいのかもしれない。
+「最高の片思い」という歌。爽やかな感じ。
+
+時間がないから、予算がないからと削られてしまうものが
+実は余裕をもたせるために必要なことなんじゃないかという気がしてきた。
+
+非実在青少年
+* 2021/07/19 (月)
+昔大学で、夏目漱石の◯ページから◯ページを読んで印象に残った部分の感想を掘り下げてみよう、という講義があった。
+それで自分がレポートしてみた部分は講師は気に入らなかったらしくて「なんでここ選んだの？」と冷たくされた。
+そして、当然のように別のページを示して「こっちのほうが面白いでしょ」とその部分の解説を始めた。
+それで、その人のことが嫌いになった。
+
 * 2021/07/18 (日)
 ツイッター API について調べよう。
 https://developer.twitter.com/en/docs
@@ -31,6 +59,9 @@ js を使うときはこんな感じだ。
 めちゃくちゃギルティギアした。
 勝率6割くらいだったので気持ちよかった。
 ラムレザルとの対戦は、リーチが違いすぎてまともに勝負できないので、水月のハコビを適当に使って荒らすしかなさそう。
+
+ホーム↔アウェイの話。
+マイノリティは、どこへ行ってもアウェイにいるような感じがしてつらい思いをする。
 
 * 2021/07/16 (金)
 スクラムというかチームで働くというのがめちゃくちゃ難しい気がしてきた。
