--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,3 +1,9 @@
+* 2021/07/23 (金)
+ツイッターアーカイブのデータをダウンロードして 6MB の json を Emacs で開いたら固まってしまった。
+しかたなく vim つかったけど何か良い方法無いかな。web-mode をつかっているから良くないんだと思う。
+
+web-mode をやめてみようか。
+
 * 2021/07/22 (木)
 
 - twitter のつぶやきを埋め込み
