モバイルでレイアウトが崩れないようにする

--- a/orgfiles/日記.org
+++ b/orgfiles/日記.org
@@ -1,8 +1,11 @@
+
 * 2021/07/23 (金)
 ツイッターアーカイブのデータをダウンロードして 6MB の json を Emacs で開いたら固まってしまった。
 しかたなく vim つかったけど何か良い方法無いかな。web-mode をつかっているから良くないんだと思う。
 
 web-mode をやめてみようか。
+
+井の中のいけず大海を知らず。
 
 * 2021/07/22 (木)
 
