Do not use multibyte file or directory name
URI に変換されたときブラウザによっては見苦しいものになるため英語のみとする

--- a/orgfiles/diary.org
+++ b/orgfiles/diary.org
@@ -1,3 +1,98 @@
+* 2021/12/25 (土)
+
+コンテンツ構造を考えなおしてみる。
+
+- 記事 ...
+  -
+- 備忘録 ...
+  -
+- 日記 ...
+  - 第5世代 ...
+  - 第4世代 ... (no title)
+  - 第3世代 ... savepoint628
+  - 第2世代 ... evergreen(obsolete)
+  - 第1世代 ... shikousou(obsolete)
+- ラボ ...
+  - ツイッターアーカイブ ... twitter_archive
+
+サイドバー邪魔な気がしてきたので消そ
+基本的には日記の中に全部突っ込んでいって、ある程度情報がまとまってきたら
+備忘録や清書した記事に持っていくという形にしようかな
+
+# 最初にマニフェストファイルを考えしたらいいんじゃないか。
+# そしたら毎回 org のディレクトリパースとかしなくていい気がする。
+
+* 2021/09/04 (土)
+- なんか疲れた。
+- faraday で cookie を見たり与えたりしたい
+  - middleware でなんかできるようになったというのはわかっているがそれ以上わからん
+
+* 2021/08/22 (日)
+眠気がやってくる。
+
+* 2021/08/21 (土)
+多元協力ロドス防衛協定おもしろかった。難しすぎるけどやりがいある。
+
+* 2021/08/20 (金)
+信頼を失いかねないバグやってしまった。
+
+* 2021/08/15 (日)
+
+組み込み数式のせいでドル記号入れるとバグるようになってしまったので一旦止める…。
+ivy から [[https://github.com/minad/vertico/][vertico]] に移行してみる。
+
+buffer と recentf を混ぜられないかな。migemo 入れてみよう。
+~/usr/local/Cellar/cmigemo/latest/share/migemo/utf-8/~
+こんな感じのパスにインストールされてることはわかったが
+
+* 2021/08/14 (土)
+
+highlight.js で ANSI escape code をきれいに出力することはできないのかな。
+そもそもテキストファイルに制御文字埋め込むのが編集つらそうなので諦めよう。
+
+* 2021/08/09 (月)
+flycheck で
+
+- gem list で rubocop あれば実行する
+- なければ bundle exec gem list で rubocop あれば実行する
+
+みたいな感じにしたい。[[https://www.flycheck.org/en/latest/languages.html#ruby][flycheck のページ]] によると flycheck-rubocoprc という変数が用意されているようだ。でもこれは関係ないかも。[[https://www.flycheck.org/en/latest/user/syntax-checkers.html#change-syntax-checker-executables][Change syntax checker executables]] のほうが欲しい情報がありそう。
+変数 flycheck-ruby-executable に実行ファイルを入れるといいらしい。
+実行ファイル作ってみるか。
+
+* 2021/08/08 (日)
+もう一週間経ってしまった…。
+
+* 2021/08/01 (日)
+カスタムコップ作る方法を調べていた。
+
+[[https://sinsoku.hatenablog.com/entry/2018/04/24/022911][この記事]]を読むと簡単に作れそうに見える。
+しかし rubocop のドキュメントではこういった方法は書かれてない。
+[[https://docs.rubocop.org/rubocop/1.18/development.html][ドキュメント]]にかかれている方法は [[https://github.com/rubocop/rubocop-extension-generator][rubocop-extension-generator]] をインストールして新しい gem を作ることになっている。
+それにはリポジトリを用意して運用する必要が出てくるので、やりたくない。
+他の方法としては、すでにある rubocop-rspec を fork して改造すると言うやり方。
+それが良いかもしれない。個人的に作って試してみるなら、それでも問題ないだろう。
+まあでも、今後、会社で使う可能性がほんの少しでもあるなら新規リポジトリとして作ってみるのでいいのではないか。
+
+かなりめんどくさそうだけど試してみるか…。
+
+* 2021/07/31 (土)
+「僕らのヒーローアカデミア」読んでいる。面白い。成長していく。
+
+* 2021/07/29 (木)
+昔、よしおさんという上司がいた。
+普段から優しい声なんだけれども、特に仕事終わりの「おつかれさまでした」だけはなんというか、朗々としてよく通る良い声だった。
+先に帰るときに「どうも、おつかれさまでした」と声をかけてもらうと、気持ちよく退社できる。そういう体験があった。
+
+* 2021/07/26 (月)
+
+ちょっとしたことで信頼を失っていることがある。悲しい。
+
+* 2021/07/25 (日)
+長い連休がおわって、ぼーっとしている。
+腕を失う理由ってなんだ。
+狂気みたいなのしか思いつかなかったけど、
+楽しい理由で腕を失うことってあるんやろか。
 
 * 2021/07/23 (金)
 ツイッターアーカイブのデータをダウンロードして 6MB の json を Emacs で開いたら固まってしまった。
