--- a/orgfiles/diary.org
+++ b/orgfiles/diary.org
@@ -1,3 +1,17 @@
+* 2022/01/13 (木)
+気力を喪失した。
+
+* 2022/01/12 (水)
+
+フェルマーの最終定理の本読み終わった。
+
+見た目は簡素なものなんだけど、証明しようとするとものすごく難しい「フェルマーの最終定理」が証明されるまでの物語。誕生秘話も面白いし、挑戦しては破れていく数学の偉人たちも面白い。証明できなかった人たちも、少しずつ手がかりを掴んでいって数学会も発展していく。日本人数学者の悲しいエピソードも出てくる。最後に証明を完成させたアンドリュー・ワイルズの手法は、いろんな技術の集大成になっていて感動的。落とし穴にハマったりするところもドラマチックで引き込まれる。
+
+とてつもなく長いのは、過去の話を差し込んだり、数学の小話を挟んでいるため。フェルマーの最終定理の行く末が気になって飛ばしたくなるけれど、飛ばさず読んでみると、やはり一個一個のエピソードが面白くて読む価値があったと思わされる。
+
+* 2022/01/04 (火)
+
+仕事始まったけどネット切断してしまって、早めに退勤した。
 
 * 2021/12/30 (木)
 
@@ -897,3 +911,79 @@ brew が壊れているらしくて変なメッセージが出る。
 * 2021/02/18 (木)
 
 担々麺屋へ足を運ぶ。券売機の前で、ずっと財布にひそませていた無料チケットを手にとった。お金を払わないのが申し訳ないので、トッピングしてサイドメニューも一品頼む。店員のおばさんが、明るい声でサービスしておくねと言い切った。促されるまま一円も払わずに席につく。待っている間に、無駄に嬉しくなって、この店の良いところを探してしまった。ラーメン屋というのは汚い場所が多いけどここの店はいつも清潔感あるな、と。いや、ちょろい。
+
+* それ以前
+天道虫や雪割草という名前は叙情的だ。
+
+漠然とした課題に取り組むというのは存外難しいものだ。
+言語の理解やソフトウェア設計をする力だけでなくて開発プロセスの理解も大事。
+プロジェクトの成功に結構深く関わってくる、というのが学び。
+
+人と関わらねばならないのだが、
+関わるほど、差を感じて虚しくなるというのがある。
+コミュニティが少ないからだろう。きっと。
+
+妻が妊娠してつわりの症状がでている。なにか食べても吐いてしまう。ずっと横になって携帯をみている。
+かわいそうに思うが、自分自身、心安らかでない。映画を一緒に見ようと思ったけど目もくれない。
+何もできることがないから遊んでいればよいのだろうがいつもどおりというわけには行かない。
+食べ後を始末したり、食器を片付けたり、洗濯したり、余分に家事をするのも嫌ではないが、とにかく落ち着かない。
+
+サイダーを一口。喉を焼く感覚にむせた。
+置いたボトルの中が、静かに泡立つのをみていた。
+
+デザインの世界にはトンマナという言葉がある。
+これはトーン＆マナーを省略したもの。
+こういう路線で行こう、こういうことはしないようにという決まりごと。
+これが有る方が物語とかでも、一貫性がでてきて良いものになると思う。
+
+全部自分のことしか考えてなかったな。
+彼がどんな気持ちでこの面接に臨んだだろうか。
+うまくやれるだろうかと不安な気持ちで、
+コミュニケーションというものに怯えながら質問していたのかもしれない。
+
+自分が大切にしていたものが盛り下がっているので別なことをやりたいと言われた。血の気が引いた。裏切られたみたいな気持ちがした。作り笑顔で肯定したけれど、心の内では怒りと動揺が広がっていた。間違った意見ではない。冷静であろうと努めて、妥当な意見だと確かめるほどに悲しい気持ちになった。自分がやりたかったこと、分かち合いたかったことは認められなかったのだなと思った。あっさりと形を変えてしまう。本当の目的はあるんだからそのことを主張して守るべきなのかもしれない。とか色々考えたけど、流れに任せて行けばいいんだと思う。きっとね。
+
+どんどん人への関心が薄れていって、ついつい黙りがちになってしまい、そうすることで、ただうんうんと頷いているだけの自分ができあがっていく。興味を持てない世間話が雲のように広がり、場を支配していくのを感じながら思うのは、自分はなんだっけ、なにがしたいんだっけということ。
+
+いろいろよくない問題が起こるとき、その原因はたいてい自分以外にあるのだけれど、だからといって俺のせいじゃないと喚いたところで改善の助けになることはあまりない。そういう根性がどこからかいつからか体に刷り込まれていて、何でもかんでも独力で解決しようと思いがちなのだが、人間には大きな幅がある。冷たく見ている人も多いが、手を差し伸べてくれる人もいる。助けを求めればそれに答えてくれる人も多い。いつもそれを思い出すのは名前も忘れてしまったあのおじさんのおかげだ。
+
+何かを救うために、誰かを犠牲にする決断を迫られる。最高のシナリオではないことを知っていながら、その道を歩まねばならないという苦々しさが足取りを重くする。今の仕事はまさにそういう状況にあり、将来、犠牲にした誰かに恨まれるであろうことを思うと心を安らげることができない。大げさに言えば、戦争の引き金を引いたような気分だ。何かを諦めるということを理解した上でそれを選択したのか。決断と呼べる行為だったのか。
+
+
+なにか相談をするとき、答え、結論が出ないまま話が終わるのはとてもつらい。なので結論がでなかったのでまた考える場を持ちましょう、という締め方をするのが正しい。
+
+ただじっとしている日曜日。とてつもない渇きが満たされたのかもしれない。どうしたいのかがあまりわからない。仕事をするほうがいいんじゃないかと思ってしまう。
+
+Ruby ばかりしていて、それは好きだから良いが、すべてが安定しているとは思えないので別のことも学ぶべきではないかという気がしている。
+
+ずっと腰の調子が悪くて、地面に体を投げ出して、だらしなく溶けかかるのが日常になってしまった。医者に何度も足を運んだが、原因がわからない。処方された痛み止めでごまかしながら生きている。仮病を使っているみたいに思われていそうで、居心地が悪い。
+
+ずっと、自分は誰からも必要とされないのではないか、社会的に価値がないのではないか、という苦しみがあったのだが、今やっと気持ちが楽になった気がしている。
+
+いつかの土曜日、少し雨の降っていたころに歩いて役所に婚姻届を出した。相手は一年と半年くらい付き合いのあった女性だ。私達の署名が揃った書類を彼女は封筒に入れて、大事そうに運んでいた。その日から二人暮らしを始めた。
+
+私は、これから生活が整理されるだろう、というくらいの印象しか持っていなかった。お互いの予定をあわせて会いに行く手間が省ける。それぞれが勝手に済ませていた食事や洗濯がひとまとまりになる。共働きだから、生活費が浮いて、貯金が増えるかもしれない。それくらいの考えでいた。
+
+けれど、それよりも重要なことに気付かされた。それは、自分が作ってきた関係が嘘ではないということ。毎日の中にその人がいて、おはようと言ったり、どうしたのと声をかけたり、家事をしていたり、巡る何かの気遣いをする。毎日、お互いがこの関係性を信じていて、維持しようとつとめている。
+
+両親が無条件にくれたものと似ている。愛情とよぶべきもの。
+
+けれど、まるで無関係の他人だった彼女から、それを与えられるまでに至ったのだということが不思議で、恐れ多く、ありがたいことに思う。手をのばすと触れられる。喜んで手を取る。そういうこと。
+
+# 出会いはあっけないものだったし、語りたくもないような面倒事もあったから、詳しくは言わない。ただ、私は結婚というものを特別に考えていなかったので、なんとなく結婚してみないかと提案して、彼女はそれを受け入れた。
+
+# 約二年ほど前に、インターネットを通じて、とある女性を食事に誘った。その人は男性と話すことには不慣れなようすで、自信がなさそうにしていた。私は、自分と同じくらい自信がない人を見るのが珍しかったので安心した。魅力的な男性を演じるのはとうてい無理だった
+
+それから色々な面倒ごとがあって、信じられないような出来事もあったが、いくらかの時間をかけて、切り払ってきた。挙式は、そうすることにあまり価値を見出していないが、そうすることでなにか二人に利益があるならそうしてもよい、という程度だった。
+
+ゲームではボーナスポイントを力に全振りすると立派な脳筋に育つ。それが一つの模範解答になっている。けれど現実ではそうとも言えない。力を上げれば上げるほど力が上がりにくくなって、時間に対する伸びが悪くなる。
+
+ディスカッションとか不毛なことでしかないと思う。答えのないことを議論するということでしょう。基本的にはむなしいことですよ。吸収率が悪い。知らないことを知るという意味ではなぁ。という点で保守的なのだろう。私は。聞くだけがいいと思っている。一言で書ききることによって失った情報のなかに、自分が望んでいる事があったのかもしれない。参加型イベントになるのが嫌だなぁと思っている。会話したいと思ってないのだきっと私は。でも多くの人が気持ちよくなれるようにしないと、人が散っていって悲しいものになってしまう。まあ参加してみたら案外いいなって思うかもしれないし、わかんないよ。というか参加者の感想をききたいな。もうやめたいのか。参加したくないのか。しゃべる勇気がないのか。時間がないのか。そういう現状把握してない状態でいきなりガチッと変化してしまうのが悲しいな。
+
+僕は嫌いだ。お前のやることなすことがいちいち癪に障る。きっとそれがお前のほんとうなのだろう。でも俺にとっては虚飾なのだ。僕とて、これほど相容れぬものとは思わなかった。悲しみが深い。そのことを表明するのは許されている。だからそういう生き方でいいのかもしれない。感情というのはそう。生きている人間に触れて、言葉、息遣いを目の当たりにすることで、その人のことを少しでも理解した気になっていく。そういうもの。大丈夫、どうせきっと優しくなる。
+
+チャタリングというらしい。 https://shumishumi.xyz/mac-key macbook がこれで壊れてた。
+
+生きてかなきゃいけないことがとても悲しい。そこにいた人たちの暖かな笑顔のような幻が、澄み切った光さす緑の草原のような本当ではない過去がとても愛しくてそれがどうしても真実のように思えてしまう。群青を溶かしたマーブルの、流れ揺れ動く。ふっと目元を緩めて、唇の端を柔らかく持ち上げるその仕草が、あまりにも美しかった。ポスターのほんの隅に写っている。人は手と足を使うことができる。ネオンカラーの靴。両手両足が千切れそうなほど振り切って。拳を叩きつけて声の限り叫ぶ。誰か聞いていてくれ。存在を。歯を磨きながら、いつなんどき心身が壊れ、今を失うことがあるかもしれないと思う。あり方の正しさは未だ見えない。
+
+思わず足を止めてしまうような歌が、街の片隅に流れている。僕らは皆クズで言いようもないクズで、ずっとずっともがき戦ってきた奪ってきた。生きることを許されようはずもないのだが。最後の一滴がそれを認めてくれるなら。ただ救いたいひとかけらになりたい。なんて遠いあまりにも遠い。一番にひとつのキズを。逆光の中にまっすぐと立っていた。一緒にいる時間があまりにも長くて。そこに命が宿るという幻を信じずにいられぬほど。大切なものになる。冷え切った瞳。見守っていて欲しいという願望にすぎなくて。遺影をいつまでも抱いている。
